CORE-5878: Remove Guava from quasar-core (and elsewhere too, if possible). (#113)
* Remove Guava from quasar-core (and elsewhere too, if possible).
* Upgrade OSGi dependencies for testing.
* Resolve warnings in potentially flaky ActorTest.
* Assert cause of Actor death, as well as ExitMessage.
* Delegate to default ConcurrentMap.getOrDefault() as super method.
* Add Corda 4's use-case to GeneralSelectorTest, and resolve warnings in Channels.